--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,9 @@ dependencies:
   
   # ストレージ・パス
   path_provider: ^2.1.2
-  image_gallery_saver: ^2.0.3
-  
+  #image_gallery_saver: ^2.0.3
+  gallery_saver: ^2.3.2
+
   # シェア機能
   share_plus: ^7.2.2
   
